Make save/restore in textfields / textare work again (bug 163714), r=rjesup@wgat e.com, sr=jst@netscape.com, a=asa